--- a/Style.css
+++ b/Style.css
@@ -89,3 +89,9 @@ footer {
     font-size: 1.6rem;
   }
 }
+.symbol {
+  font-size: 2rem;
+  text-align: center;
+  margin-top: 1rem;
+  color: #6b8f7b;
+}
