--- a/style.css
+++ b/style.css
@@ -14,15 +14,16 @@ header {
 }
 
 h1 {
-  font-size: 2.5rem;
-  margin-bottom: 0.5rem;
-  color: #4f6b5a;
+  font-size: 2.4rem;
+  margin-bottom: 0.6rem;
+  color: #3f5a4b;
+  letter-spacing: 0.02em;
 }
 
 h2 {
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   margin-bottom: 1rem;
-  color: #4f6b5a;
+  color: #445f52;
 }
 
 /* Layout */
